# ChangeLog for app-office/akonadi-server
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/ChangeLog,v 1.135 2014/04/01 11:44:59 johu Exp $

  01 Apr 2014; Johannes Huber <johu@gentoo.org> akonadi-server-1.11.0.ebuild:
  x86 stable, bug #504250

  01 Apr 2014; Chema Alonso <nimiux@gentoo.org> akonadi-server-1.11.0.ebuild:
  Stable for amd64 wrt bug #504250

*akonadi-server-1.12.0 (29 Mar 2014)

  29 Mar 2014; Johannes Huber <johu@gentoo.org> +akonadi-server-1.12.0.ebuild,
  akonadi-server-1.10.3.ebuild, akonadi-server-1.11.0.ebuild:
  Version bump.

  22 Dec 2013; Johannes Huber <johu@gentoo.org> -akonadi-server-1.9.2.ebuild:
  Remove old.

*akonadi-server-1.11.0 (18 Dec 2013)

  18 Dec 2013; Johannes Huber <johu@gentoo.org> +akonadi-server-1.11.0.ebuild:
  Version bump.

  11 Dec 2013; Agostino Sarubbo <ago@gentoo.org> akonadi-server-1.10.3.ebuild:
  Stable for ppc64, wrt bug #484884

  10 Dec 2013; Agostino Sarubbo <ago@gentoo.org> akonadi-server-1.10.3.ebuild:
  Stable for ppc, wrt bug #484884

  09 Dec 2013; Agostino Sarubbo <ago@gentoo.org> akonadi-server-1.10.3.ebuild:
  Stable for x86, wrt bug #484884

  08 Dec 2013; Agostino Sarubbo <ago@gentoo.org> akonadi-server-1.10.3.ebuild:
  Stable for amd64, wrt bug #484884

  14 Oct 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  akonadi-server-1.10.3.ebuild:
  Needs qt-4.8.5 or the postgres backend breaks horribly

*akonadi-server-1.10.3 (09 Oct 2013)

  09 Oct 2013; Johannes Huber <johu@gentoo.org> +akonadi-server-1.10.3.ebuild,
  -akonadi-server-1.10.2-r1.ebuild,
  -files/akonadi-server-1.10.2-datastore_query_fix.patch:
  Version bump fixes bug #484572. Remove old.

  08 Sep 2013; Michael Palimaka <kensington@gentoo.org>
  akonadi-server-1.10.2-r1.ebuild, akonadi-server-1.9.2.ebuild:
  Correct dependencies wrt bug #484166.

*akonadi-server-1.10.2-r1 (13 Aug 2013)

  13 Aug 2013; Maciej Mrozowski <reavertm@gentoo.org>