@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST akonadi-1.12.0.tar.bz2 250974 SHA256 35243793b73e8028973c101c68ef80a8a54be0fe9aa562c9473e73b4657fea26 SHA512 62bf31552fabb6b722aa9c8ebc112a5af1fcc6c2a962b75c0ff4a79ad4999c03169f0e2a993ed382b753d578a69950aae6b28d255d58f5496978fc2d4207b7ba WHIRLPOOL 4746a0a70ea44813c8e0278ee4be3471957e0c1a5e5ace3507be2866223acc92f2c69e6ed0c4f9ac634afe41fe73168ba593e188dc46d9584a37bfa1895cf0a7
+DIST akonadi-1.12.1.tar.bz2 251899 SHA256 a073228fda8bdbcf836af32d4b4c44dcbe58a3eac6da4e5a286b42ace9d83145 SHA512 128af06874ec32be4205d8bfcae5ac044d1fade6b2c612cdfe801be20f179f2b70e8a6d48ef0427e4b419b6c1efa8eed3b9d741765750f36fb89e909da8040a2 WHIRLPOOL c83fa6395982b5d06d8f877c833e2b1fe0bd4d3906f4a3f8aa86b78b946019bbea6b5d507026e3675001e82925d144afc1ed51ebfec0ec6e40a6db0571464326
 DIST akonadi-server-1.10.3.tar.bz2 228633 SHA256 a8f66eec479c235ec67e77befac50c42743f627663fe2bb49238e82e6fbfffb0 SHA512 836917f3fb8ec5388d7145402fb1b55ca00d14d78f92d0105fecc6c052e99d497e17a2484f581b9d2f20433220a9343e6b4bff8ad34e48767e6a42d309572c66 WHIRLPOOL 468908b64e66a826e17dc8f5dca3f907bfcd09669810f9f1aca96b7f812ebc2c0138a6f840a5e5f8d0734cc05eecddeebafe8affe32994c2ed7bb76c2c309b38
 DIST akonadi-server-1.11.0.tar.bz2 235101 SHA256 0cb257509d53927241b71d85c42efb0b5776efc37fc8dc732e75f6813b8a264d SHA512 366f0e4a86038af5eb6603653e599076c66e84f59db57f4c56a89ec265be7e335f3f5d14444030a6f398e2361969ad85bc73357359da7ab8c307ec3c5d80ea40 WHIRLPOOL b050f5e1d5220ec512ab6e57cd083b652f03ef1e391fb336a51888aede7b0faf2f2ab58db6f6e67ee3fd7ceea8efcb54d5c3b1a6c224adf3deb41cb10b3c91d2
 EBUILD akonadi-server-1.10.3.ebuild 3111 SHA256 29bd5ca98f2b929220543ff37899c3122dce8e31e278d146133e3efe8996d1eb SHA512 8e388ffc6c72f43b5f49a6cdc596d906e2b2c7f72ada297221a006f8b68298c10e59c8fd5a1009a5067f6c5803fa1c4f0bb325acb3f850c3bdb29c712a21f356 WHIRLPOOL 263856ee50cebf5d27425907cbdd2b3d8233c5a956d1d83f5eaaab0eed8a5210be1b93becd54a3e34c53071e0be64486f74ac0ce092fe3ee90ee62cce2664daa
 EBUILD akonadi-server-1.11.0.ebuild 3111 SHA256 c6b981395f78a026410bf3aa181c8d22856010a13be4f1a161824c3fa235eeae SHA512 d2479fbf8d6e9cd495268c79595a47ee95e3ff52e45a41c1b2d1d3f190857cf093405d4cbcc3fb1b277d5c709ebb5355f94c17409e3eb594feb938b0bd439f69 WHIRLPOOL 78c06f27ee668900936fb8e23167a1a08a028047954a57fdb16a9ded69d2b4ff4e788e95577f66d0f195cfda87a176e2e29fb27dd72339e7708376ca641c6f72
-EBUILD akonadi-server-1.12.0.ebuild 3061 SHA256 1880bf45cab91575059edc48720aef0ebeb67a79b2f47d0c51ba9193cb2f3729 SHA512 ac73124c834641980de22dbd5a398978dc577284260a23cf8d4091606e3e036c1aed35d5648cab4b3c086f0318a82b5f5289ebd8b96c27fb213f696eb0d5ec52 WHIRLPOOL 012b1795973932ef69b5fdef6c9c3d5cdfb9477ed2790295c5204942447dbd79624d97be7bea704511fc2d8c84c756b9310d69be1f4318726d2b720c7f81a6ec
-MISC ChangeLog 20070 SHA256 9bb918631dda789f3312c8858b9bc78de0bb4a4c69c080f65e562e033cedf28b SHA512 e32b28bb5bb5f84e2890924368a0340a7a0881ebf91036214b7465dce6a5da523559b849836b2687af874df7571137a39325b7eee0a768aed6695b1bd065e72e WHIRLPOOL 25aff826a245839f3c6a63a8e9c46bdcbca346cbaaad119fba403fa0d640b9e6cc8474c1583bee23fd7d5cb31c39534089653a62e955e9330e1a561370004d50
+EBUILD akonadi-server-1.12.1.ebuild 3061 SHA256 ac34eae8dec1beb04163fc073f432bb96069a849c38e241ac6f112040a62b72f SHA512 ae0f37a8e554d146117023685f392488c1309c4e045f7d6d70aa375c61f1a94a7a2393fa2e6403bedd631d1bdb6d8e71fbfaee37a69e39e174b8a74d04ad7e7f WHIRLPOOL a7ca7803d05cc367c1fbd55e5b766f9ec1372d5249bb14fda44e061fcb94931b003d5da95405feda5495555f4ef8eb43db0a67f640f6a8c6bf667aac3f160fee
+MISC ChangeLog 20249 SHA256 cd44b04e684135aed111f5b2129b1b45516e30abeab65a14ea3566a525f048b5 SHA512 b18a40fea817c8455816d9d89561d1ffdd67adb82d51c3abd4e24885c1b34f420578090774194fb4248b1e4deb95f6d1f439881cd279da174898266b44f0e734 WHIRLPOOL 3336ef33193be56e91b669cc4fe404754f6e547261ea070be72916cc0d772fce01736571329fc057cc8f1d0407a962b0c3e8d5ff307092bbd5402413c9c2c6b7
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTOqbAAAoJEGVpnaTzz9K9XpMQAMdoWX/tN4bW1iIh5D7q73z9
-11WlbnN+C1quP9VLiHlVT+JDLuTM0dbv7njnnsRkMZNEaPq1Lv3GUqhPq+4OlguN
-WXPFoufK824iSX8xLXOoXOg46HPM/qZJgSX5jt/69le2zBJN/uAP1POo4Pg9+cTw
-KtawAZzOO+w3yEgK1v3rFI5vNoFkuvMDS8gKgbCwmfVwpSwIajI2IYFb6TlYZBXn
-MTIL6tlaTfnhrgwuNdAYnSlKRqfVjO95AOsDAgubw+F3eSFAZZObP34Znl60OFxx
-VFkrYc77tSH3cHCz3ouG3agBNoYU+mjsM+fPPFvzzhVjaQ8Sm0uCkZREG+aReC/9
-LHCqsuG0S3k2f2s36/AuSB1/HksyJcDxo9usfHU5tI64afTS0biWpP2eQA6rIa8z
-YRkZ9tVhKm1EHjn4MYvDkeuj1FfSisoCu6Rj7+JlPpv/LLLy6GKfoRmjEGFQuvf/
-U6nc79LiHlZDzyPWRRuLXc06EydOppOI9shSrVfyehVf068twVVzMX3/5SC7eMq0
-V6X03CM4opTHzdqb26K7f9VNKEU24VCi0hLSB6iuMIUwGpuxcmXZ0L7JZ1dszjKz
-S7UDx4gPuGhE1WVmVRlVzM1/yCnUJl10/42RajKuJ8zRL1mDrxFUpgDYwtveLot/
-ixo46N2jcLEAkx+RNHXn
-=dtKc
+iQIcBAEBCAAGBQJTRATAAAoJEGVpnaTzz9K9U4sP/0Z7wpVA5MtU7FZIB+pwROyH
+LgfKN7gqk9d+y9Cb2Fu6V5awomeRi6ygxAFTafPkFB6m3p76tWtmeCvSYDrLcxD8
+DJz022YwfP9yCeM5VfLFEiHnp81f7FWJlYhM70zTNrI8kFNPB0KNKAl17S+9/YNy
+s6+QX18eJ4M1HCegTmKWrTuadHBE8J4DST/oaKqQyxr/TZtVh5oCg9AzU3uSj69w
+lE0tUCmSzXyRwCoZPC7S01vnVQBLJTDquLaEZJcXnq9SU7qNqsB6j6DFXu1M/+go
+OPLiEdttKKex2R+plukhlh+bZWmnLJ25pUHvQVhD+cg0yfpBKVbwkJ4sOBfZ3vqj
+rEkU+q3Jd9kfUmcLY7yN8ldLsHZrApCmPWtPfQbM7KzfekTCHl7Q1EexQK7jyemq
+kmMJNnYAtYENba2F/42OziX5b1bkV+IzJY46wKaT3jkxCR1YAXHcVEx86LR1BHWw
+jj+u36zR7lkWzUsLerJNUJpj8RSzBUyiEixyWDrJb1sWSL95uUZgL648Gu+nw+8S
+o9KI8d0g6sAgslX/9IBPm59xBRlhYo4znjDANdDu+Zmflmmm6ao0NdVKErUnK7Cm
+5yE+/2/qyHYBSVFJQomiNEfC1Glh/D8rfOjKCv5Fx48u9gxFKCNzaPNWyNKgy3rK
+Z7BZ5o7+FOLdYH8yJWDa
+=uTn3
 -----END PGP SIGNATURE-----
