@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/akonadi-server-1.12.0.ebuild,v 1.1 2014/03/29 19:48:49 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/akonadi-server-1.12.1.ebuild,v 1.1 2014/04/08 14:16:31 johu Exp $
 
 EAPI=5
 
