@@ -9,6 +9,6 @@ LICENSE=LGPL-2.1
 RDEPEND=dev-libs/boost:= >=dev-libs/soprano-2.6.51 x11-misc/shared-mime-info qt4? ( >=dev-qt/qtcore-4.8.5:4 >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/qtgui-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[mysql?,postgres?] >=dev-qt/qttest-4.8.5:4 ) qt5? ( >=dev-libs/soprano-2.6.51[-qt4,qt5] dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtsql:5[mysql?,postgres?] dev-qt/qttest:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 ) sqlite? ( dev-db/sqlite:3 ) postgres? ( dev-db/postgresql-server )
 REQUIRED_USE=^^ ( qt4 qt5 ) || ( sqlite mysql postgres )
 SLOT=0
-SRC_URI=mirror://kde/stable/akonadi/src/akonadi-1.12.0.tar.bz2
+SRC_URI=mirror://kde/stable/akonadi/src/akonadi-1.12.1.tar.bz2
 _eclasses_=cmake-utils	7798d4361fbdd043014e635a1753e076	eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=12fd9798bfd4f5bae1ed090bd57f91d9
+_md5_=bc1ff945487af268111fe431217d28c1
