@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=net-libs/libpcap >=net-libs/libnet-1.1.0-r3
+DESCRIPTION=an implementation of an E-component of Network Intrusion Detection System
+EAPI=5
+HOMEPAGE=http://www.packetfactory.net/Projects/libnids/
+IUSE=static-libs
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=net-libs/libpcap >=net-libs/libnet-1.1.0-r3
+SLOT=1.1
+SRC_URI=http://www.packetfactory.net/Projects/libnids/dist/libnids-1.18.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=7a9338140b878b15e542ccc0d08f2fd6
