@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=net-libs/libpcap glib? ( dev-libs/glib ) libnet? ( >=net-libs/libnet-1.1.0-r3 )
+DESCRIPTION=an implementation of an E-component of Network Intrusion Detection System
+EAPI=5
+HOMEPAGE=http://libnids.sourceforge.net/
+IUSE=+glib +libnet static-libs
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=net-libs/libpcap glib? ( dev-libs/glib ) libnet? ( >=net-libs/libnet-1.1.0-r3 ) !net-libs/libnids:1.1
+SLOT=1.2
+SRC_URI=mirror://sourceforge/libnids/libnids-1.24.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=5655b5ebc4938bf3c55b224899ff1151
