@@ -9,14 +9,16 @@ DIST libnids-1.18.tar.gz 114013 SHA256 b0275c914197a53c6ccf631eac756fd37ec6f2d8f
 DIST libnids-1.24.tar.gz 151021 SHA256 314b4793e0902fbf1fdb7fb659af37a3c1306ed1aad5d1c84de6c931b351d359 SHA512 2046900023e853d7dbd7061c9f47d8a8ba26320991ca34198249019c1b9a6f75010574f9f022d02976272a384cf769394c4cc3ae536fc6164716cadc4770bb53 WHIRLPOOL c012e724c0f724cd817db4726a4ee1c0a438d717fe8534f96c41829e5574a3edaf4fd287c3acd65da4ee6591bb55dcd0f0bb71da7302e7b8ba43992ba85a1455
 EBUILD libnids-1.18-r2.ebuild 946 SHA256 b45750183b8179350ca56fda7568a4503e4a8ae59e3687bd75b29c111265df71 SHA512 45faa4752ba5f3f6875a55585e741ba7366b8e0dedbc08b9e74571197408e98c0d44831fa12a0de347fc077526c61ae0fe26eea9fbf16770624fa4a87df7a0ca WHIRLPOOL 784be52a0085dc88be27c206fe8c07b74166c20ae7c6b2e911fbda7635599ef4b9212021ece918239015afa2c5909173111c96e6182f79d6361f66e000b2bce7
 EBUILD libnids-1.18-r3.ebuild 1119 SHA256 2f582ce26b29b3c5664ba57978763835cbf32bdf7bf29ae87abf79aab061ce00 SHA512 0562ec29bdc69d0def9fbbadb1579eb3a4419d7d4fca8de8a8ff5f15d411d8612403549187948a9cc070a8a22743f0adffabe88f0b45e2eb7c6349ee3d129042 WHIRLPOOL 8702f2a30c5e5d4b1b0065b76f0fb3f65c6fe4fc2f2a4007a38cccf35ad84860e77b9ad2b546fc203db610cc9fee32609b5ce4064f1769d6effc58e8667b767e
+EBUILD libnids-1.18-r4.ebuild 1168 SHA256 da8c706c26a64ec25d0e789a05a000f3d69190a757518ab7d3236d3ad0a087b9 SHA512 a6b32b6a6c762bb6edf2bad6ca095846226f6f476173904288d449c62531389d4bc7f9273aa28a8e1ac4ce950d9b0b63382df54c19d2783b6e2d8727ac259527 WHIRLPOOL bed52ddc5b6656319dae5192e29496e809a3f28ae267b3f2bb7c9edb02d93c2e7cc96e996e3662514044662273f1394ad138c76041bffde324accac45b95eeec
 EBUILD libnids-1.24-r3.ebuild 1108 SHA256 d3d94675772caaf2b9e3b38713461e56aaff010dbcdd31d6bff4df983e7459b1 SHA512 4d6d66c0590e6db5ef0bc9b2e4fa549c12b4ce73a02409203069ec0839f1ee0bb9e15737b3bbf167c99498449913704e6b9bdfaa2827a310db615793fdfbe8e9 WHIRLPOOL 6ed7ac6397db9066de7d4295d37f51cd43195550f1f78349965ddcabfb864cdfe0a35d87b912dd7e0f0d86036d441d3c0e8b56a766e3d4ff66931b1992c10b5e
 EBUILD libnids-1.24-r4.ebuild 1139 SHA256 963c69cfd1858b58f1fca0e6e93a07640b6b84b12b2ed57afad002e0dc69464d SHA512 0b1f8915342a9e0c099662a15505502e8c7f649da4ab4afe396e7015fa6463164706b3b829ed916024bfc19d1a1b71eab9442ab1d585983999e6a52c372ede43 WHIRLPOOL 71afce8a593dd1fe5e9edeea7f2a6a1a37b6ce684cad10ee121673fa711060c0c4c78bde960c75acba14dd98ed2e8d6d68ef85d59e30b9ab9bef990c8098b51b
-MISC ChangeLog 9563 SHA256 6f5e1b9de481cddc9ef88f5c2fa77b57c002797d42422172d54bd14f4a91abe0 SHA512 1ea20909f8e814e3391995d3049bc0d06ee83e64e55e52a2dd1f7174e8a7770eed45b5b03ecfe9fc50358019e11f69f43926928f5f267e2b07eeca9c9cd5e9ca WHIRLPOOL 6d44f735c760def30b80c2cd92c98aa0775b9d3c33b5fb9b995ec3eae47b6cffff66ca948ae5719576fa466b73f7f6c8070455a36c9867c989f87a381626d4a6
+EBUILD libnids-1.24-r5.ebuild 1188 SHA256 591164628239ca1d49850053646bd903069b4c3177418d5ada59983af3a33b44 SHA512 73a80a309bbe363a904c7782102baa6cd66870532a859e0604357f3c8f1c49198b3c554f3332994bffe60b45bb813b99bf1f65e78f2e62eee5481db4f354d683 WHIRLPOOL 4b24f694587c07a9cf3ec50a896c2b6327c38d22dd8137dcbf58f64a822c68f5d6ec9f2e19ea2557e008e963e92eedc0ba62f5e1ad5b5ac4dead7be76626c7ff
+MISC ChangeLog 9777 SHA256 9f6269e2dbccea6f4527e27bdf3a3856c1910f3a3819d605c60f0a6db8323b6f SHA512 1652e5dbec24051107947c44d5a275ddb68f7a4fa890e11cd4e367a95bcb35e03d907d4624bbf40187571be08fe5ffcf01caf96504233574bacf73b7704c64a3 WHIRLPOOL 093ca113b29dd0a34b33d2551ad7f8efe154e9808bde58841fd88ed66df483d742fa1bd8d138dfa7e25c0feb1dced3655b12f7e1a09b9bcf003348db9858a71e
 MISC metadata.xml 483 SHA256 fea8cd5f14b2ecdcb26227be10d73862452542ea2ac9e41738c8dd1a1a093015 SHA512 96e105f85a639099f19a2f7ec4f3b11e43208b6a4c672d3b82d086e3395ed1e774e2af0caa052300dff1dfdc19bb4f6c4db3f6b5cae16f5173794e7bcb34be62 WHIRLPOOL c50852fa54623a77718eeb95309a7f9f3a71cbef8da85b6eac6e3809e639d9dc5c91eb72ab3839cb02246dec6c50a979e7e63f9e8ae31c306bf1582e293e1696
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMpu/gACgkQVWmRsqeSphOkbACdGHTzXKKDDBwNFl2q9cv6d8hn
-63QAn3w4/bj7YFlguJ/RVBa9m95+4yAu
-=dZXB
+iEYEAREIAAYFAlNEAWQACgkQVWmRsqeSphMl5ACeILRFSkB9wScQyXZoQtbP7d8Y
+AxsAnjuyYio3pIH6QxvYG0jJZvD5tJml
+=xudA
 -----END PGP SIGNATURE-----
