@@ -1,6 +1,12 @@
 # ChangeLog for app-office/akonadi-server
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/ChangeLog,v 1.135 2014/04/01 11:44:59 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/akonadi-server/ChangeLog,v 1.136 2014/04/08 14:16:31 johu Exp $
+
+*akonadi-server-1.12.1 (08 Apr 2014)
+
+  08 Apr 2014; Johannes Huber <johu@gentoo.org> +akonadi-server-1.12.1.ebuild,
+  -akonadi-server-1.12.0.ebuild:
+  Version bump, remove old.
 
   01 Apr 2014; Johannes Huber <johu@gentoo.org> akonadi-server-1.11.0.ebuild:
   x86 stable, bug #504250
